5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1760_1183.log
== TEST (2019-05-29 14:52:51) 
-- CODE:
from numpy import*

v = array(int(input("v: ")))
print( v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:34) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:35) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

i = i + 1
a = size(v)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:53) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)


a = size(v)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:23) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)

while (i != a)
		if	(v[i] > 0):
			d = (v[1])
		else:
			 print(a)
print(d)
		 

-- ERROR:
File "XXXX", line 11
    while (i != a)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:28) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)

while (i != a):
		if	(v[i] > 0):
			d = (v[1])
		else:
			 print(a)
print(d)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:40) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
		else:
			 print(a)
		i = i + 1
print(d)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:02:24) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
		else:
			 print(a)
		i = i + 1
print(d)
		 

-- EXECUTION TIME:
0.491591
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[ -1  -2  -3  -4  -5  -6  -7  -8  -9 -10   1]
11
11
11
11
11
11
11
11
11
11
1
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[ 2 -1  3 -4  5]
5
5
5
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[-1 18 32 14 25 -6]
6
6
25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:26) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
		else:
			 print(a)
		i = i + 1
print(d)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:03) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k = k + 1

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1
		else:
			 print(a)
		i = i + 1
g = arange(k)
g = zeros(k)
print(k)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:26) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1
		else:
			 print(a)
		i = i + 1
g = arange(k)
g = zeros(k)
print(k)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:07) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1
		else:
			 print(a)
		i = i + 1
		
g = arange(k)
g = zeros(k)
print(k)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:30) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1

		i = i + 1

g = arange(k)
g = zeros(k)
print(k)
		 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:11) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1

		i = i + 1

g = arange(k)
g = zeros(k)


y = 0
r = 0

while	(y != a):
		if (v[i] > 0):
			g = g[i]
			
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:18) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1

		i = i + 1

g = arange(k)
g = zeros(k)


y = 0
r = 0

while	(y != a):
		if (v[r] > 0):
			g = g[r]
			r = r + 1
		y = y + 1
			
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:50) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1

		i = i + 1

g = arange(k)
g = zeros(k)


y = 0
r = 0

while	(y != k):
		if (v[r] > 0):
			g = g[r]
			r = r + 1
		y = y + 1
			
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:28) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1

		i = i + 1

g = arange(k)
g = zeros(k)


y = 0
r = 0

while	(y != k):
		if (v[r] > 0):
			g = v[r]
			r = r + 1
		y = y + 1
			
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:21:14) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1

		i = i + 1

g = arange(k)
g = zeros(k)


y = 0
r = 0

while	(y != k):
		if (v[r] > 0):
			g = v[r]
			r = r + 1
		y = y + 1
			
      print(g)
-- EXECUTION TIME:
0.13289
-- ERROR:
  File "/home/codebench/codes/1760/1183/main.py", line 32
    print(g)
           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:17) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1

		i = i + 1

g = arange(k)
g = zeros(k)


y = 0
r = 0

while	(y != k):
		if (v[r] > 0):
			g = v[r]
			r = r + 1
		y = y + 1
			
      print(g)
-- ERROR:
File "XXXX", line 32
    print(g)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:26) 
-- CODE:
from numpy import*

v = array(eval(input("v: ")))
print(v)

a = size(v)
i = 0
d = arange(a)
d = zeros(a)
k =0

while (i != a):
		if	(v[i] > 0):
			d = (v[i])
			k = k + 1

		i = i + 1

g = arange(k)
g = zeros(k)


y = 0
r = 0

while	(y != k):
		if (v[r] > 0):
			g = v[r]
			r = r + 1
		y = y + 1
		print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
